--- a/package.json
+++ b/package.json
@@ -11,14 +11,11 @@
   "dependencies": {
     "fs": "^0.0.1-security",
     "gray-matter": "^4.0.3",
+    "markdown-it": "^13.0.1",
+    "markdown-it-highlightjs": "^4.0.1",
     "next": "12.1.6",
     "react": "18.1.0",
-    "react-dom": "18.1.0",
-    "react-remark": "^2.1.0",
-    "remark": "^14.0.2",
-    "remark-gfm": "^3.0.1",
-    "remark-html": "^15.0.1",
-    "remark-prism": "^1.3.6"
+    "react-dom": "18.1.0"
   },
   "devDependencies": {
     "eslint": "8.15.0",
