--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,15 +1,32 @@
 {
-  "short_name": "SoftForge",
-  "name": "SoftForge.",
-  "icons": [
-    {
-      "src": "logo.png",
-      "type": "image/png",
-      "sizes": "64x64"
-    }
-  ],
-  "start_url": ".",
-  "display": "standalone",
-  "theme_color": "#3b82f6",
-  "background_color": "#ffffff"
+    "theme_color": "#3b82f6",
+    "background_color": "#3b82f6",
+    "display": "standalone",
+    "scope": "/",
+    "start_url": "/",
+    "name": "SoftForge",
+    "short_name": "SoftForge",
+    "description": "A team for every coder!",
+    "icons": [
+        {
+            "src": "/icon-192x192.png",
+            "sizes": "192x192",
+            "type": "image/png"
+        },
+        {
+            "src": "/icon-256x256.png",
+            "sizes": "256x256",
+            "type": "image/png"
+        },
+        {
+            "src": "/icon-384x384.png",
+            "sizes": "384x384",
+            "type": "image/png"
+        },
+        {
+            "src": "/icon-512x512.png",
+            "sizes": "512x512",
+            "type": "image/png"
+        }
+    ]
 }
