--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
     "react-icons": "^4.3.1"
   },
   "devDependencies": {
+    "@types/node": "^17.0.33",
+    "@types/react": "^18.0.9",
     "eslint": "8.15.0",
     "eslint-config-next": "12.1.6",
-    "sass": "^1.51.0"
+    "sass": "^1.51.0",
+    "typescript": "^4.6.4"
   }
 }
