--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "postbuild": "next-sitemap",
     "start": "next start",
     "lint": "next lint",
     "prepare": "husky install",
@@ -17,6 +18,7 @@
     "markdown-it-highlightjs": "^4.0.1",
     "next": "12.1.6",
     "next-pwa": "^5.5.2",
+    "next-sitemap": "^3.0.5",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-icons": "^4.3.1"
