feat: added theme support
Added custom theme support and refactored default theme.

Refactored codebase.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
     "incremental": true,
     "baseUrl": ".",
     "paths": {
-      "@/components/*": ["components/*"],
+      "@/components/*": ["themes/default/components/*"],
       "@/styles/*": ["styles/*"],
       "@/lib/*": ["lib/*"],
       "@/config/*": ["config/*"]
