--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   "dependencies": {
     "fs": "^0.0.1-security",
     "gray-matter": "^4.0.3",
+    "katex": "^0.16.0",
     "markdown-it": "^13.0.1",
     "markdown-it-highlightjs": "^4.0.1",
+    "markdown-it-texmath": "^1.0.0",
     "next": "12.1.6",
     "next-pwa": "^5.5.2",
     "next-sitemap": "^3.0.5",
@@ -27,6 +29,7 @@
     "@commitlint/cli": "^17.0.0",
     "@commitlint/config-conventional": "^17.0.0",
     "@commitlint/travis-cli": "^17.0.0",
+    "@types/katex": "^0.14.0",
     "@types/markdown-it": "^12.2.3",
     "@types/react": "^18.0.9",
     "eslint": "8.15.0",
